     "type=hybrid."
   * Fixed invalid file size data from the server crashing the client on the
     network transfer progress dialog (bug #20893).
 * Add-ons server:
   * Fixed mishandling of inaccessible add-on packs resulting in multiple data
     conversion errors and stalling clients (bug #20893).
 * AI:
   * RCA AI: fix bug #21334: surrounded units don't attack
   * Simple Attack Micro AI: new optional parameter weapon=
   * Wolves Micro AI: fix bug that sometimes kept predators from attacking
   * Lua AI: new replay-safe action ai.synced_command()
 * Campaigns:
   * Dead Water:
     * New world map.
   * Delfador's Memoirs:
     * Updated sprite and animations for the Wose Shaman.
   * Descent into Darkness:
     * S3: set aggression=1 for Side 4 to avoid wrong choice of attack
   * Eastern Invasion:
     * Made Dacyn use teal TC and Mal-Ravanal blue TC, to make them fit the
       portraits more.
     * Updated maps for scenario 1-7.
   * Heir To The Throne:
     * Increased Li'sar's lvl3 hitpoints from 52 to 62.
     * Implemented the portrait variations for Delfador and Asheviere.
     * Changed Kaylan's portrait and gave him teal team coloring.
     * Changed the flaming sword so it's now a 25% increase to damage, instead
       of changing the damage to 15-4
     * Added a new mechanic to Sceptre of Fire. By standing still for a turn,
       Delfador can now tell the player the shortest path to the Sceptre.
     * Fixed Konrad's level 1's attack animation giving an 'image not found'
       error.
   * Legend of Wesmere:
     * S9: set aggression=1 for Side 4 to avoid wrong choice of attack
   * Liberty:
     * New world map.
     * S5: set aggression=1 for Side 3 to avoid wrong choice of attack
   * The Rise of Wesnoth:
     * New world maps.
     * Redesigned scenario 'A New Land'.
   * The South Guard:
     * S6b: set aggression=1 for Side 2 to avoid wrong choice of attack
   * Son of the Black Eye: